Add events model, update new student form to include checkboxes for gender and sponsorship status.

--- a/Red_Sweater/app/views/admin/index.html.erb
+++ b/Red_Sweater/app/views/admin/index.html.erb
@@ -1,16 +1,16 @@
+<%= link_to "Add a student who needs sponsorship", new_student_path %>
+<%= link_to "Add an event", new_event_path %>
+
 <div class="col-sm-12 sponsor-students-images">
-  <h3>Students looking for sponsors</h3>
+  <h3>Edit student sponsorship page</h3>
   <% @students.each do |student| %>
     <div class="col-sm-3 sponsor-students">
       <%= image_tag("#{student.image}.png") %>
       <h4><strong><%= student.name %></strong></h4>
       <p><em><%= student.age %> year-old <%= student.gender %></em><br>
       I want to become: A <%= student.dream %></p>
-      <% if student.sponsored %>
-        <p><strong>Sponsored!</strong></p>
-      <% else %>
-        <%= link_to "Sponsor #{student.name}", students_path, :class => "btn btn-default" %>
-      <% end %>
+      <%= link_to "Update", students_path, :class => "btn btn-default" %>
+      <%= link_to "Remove", students_path, :class => "btn btn-default" %>
     </div>
   <% end %>
 </div>
