--- a/Red_Sweater/app/views/layouts/application.html.erb
+++ b/Red_Sweater/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
+    <nav id="navbar" class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <%= link_to "Red Sweater Project", root_path, class: "navbar-brand" %>
+        </div>
+
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Sponsor", students_path %></li>
+            <li><%= link_to "Events", events_path %></li>
+          </ul>
+          <ul class="nav navbar-right">
+            <li><%= link_to "Admin", admin_index_path %></li>
+          </ul>
+      </div><!-- /.container-fluid -->
+    </nav>
     <div class="container">
       <%= yield %>
     </div>
