--- a/Red_Sweater/app/views/admin/index.html.erb
+++ b/Red_Sweater/app/views/admin/index.html.erb
@@ -4,13 +4,13 @@
 <div class="col-sm-12 sponsor-students-images">
   <h3>Edit student sponsorship page</h3>
   <% @students.each do |student| %>
-    <div class="col-sm-3 sponsor-students">
+    <div class="col-sm-3 admin-student-view">
       <%= image_tag("#{student.image}.png") %>
       <h4><strong><%= student.name %></strong></h4>
       <p><em><%= student.age %> year-old <%= student.gender %></em><br>
       I want to become: A <%= student.dream %></p>
-      <%= link_to "Update", students_path, :class => "btn btn-default" %>
-      <%= link_to "Remove", students_path, :class => "btn btn-default" %>
+      <%= link_to "Update", edit_student_path(student), :class => "btn btn-default" %>
+      <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
     </div>
   <% end %>
 </div>
