--- a/Red_Sweater/app/views/layouts/application.html.erb
+++ b/Red_Sweater/app/views/layouts/application.html.erb
@@ -22,7 +22,19 @@
             <li><%= link_to "Events", events_path %></li>
           </ul>
           <ul class="nav navbar-right">
-            <li><%= link_to "Admin", admin_index_path %></li>
+            <!-- <li><%= link_to "Admin", admin_index_path %></li> -->
+            <li class="dropdown">
+              <a href="/admin" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Admin dashboard", admin_index_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Add a student who needs sponsorship", new_student_path %></li>
+                <li><%= link_to "Add an event", new_event_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "All events", events_path %></li>
+                <li><%= link_to "All students", admin_index_path %></li>
+              </ul>
+            </li>
           </ul>
       </div><!-- /.container-fluid -->
     </nav>
