--- a/Red_Sweater/app/views/students/new.html.erb
+++ b/Red_Sweater/app/views/students/new.html.erb
@@ -1,4 +1,5 @@
 <div class="col-sm-12">
+  <%= link_to "< Return to admin dashboard", admin_index_path %>
   <h3>Add a student</h3>
   <div class="col-sm-6">
     <%= render "form" %>
