Add flash notices and alerts when students or events are added or deleted

--- a/Red_Sweater/app/views/layouts/application.html.erb
+++ b/Red_Sweater/app/views/layouts/application.html.erb
@@ -39,6 +39,8 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
+      <%= flash[:notice] %>
+      <%= flash[:alert] %>
       <%= yield %>
     </div>
   </body>
