--- a/Red_Sweater/app/views/admin/index.html.erb
+++ b/Red_Sweater/app/views/admin/index.html.erb
@@ -7,7 +7,7 @@
       <p><em><%= student.age %> year-old <%= student.gender %></em><br>
       I want to become: A <%= student.dream %></p>
       <%= link_to "Update #{student.name}", edit_student_path(student), :class => "btn btn-default" %>
-      <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
+      <%= link_to "Delete #{student.name}", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
     </div>
   <% end %>
 </div>
