--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,7 +6,7 @@
       <h4><strong><%= student.name %></strong></h4>
       <p><em><%= student.age %> year-old <%= student.gender %></em><br>
       I want to become: A <%= student.dream %></p>
-      <%= link_to "Update", edit_student_path(student), :class => "btn btn-default" %>
+      <%= link_to "Update #{student.name}", edit_student_path(student), :class => "btn btn-default" %>
       <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
     </div>
   <% end %>
@@ -25,7 +25,7 @@
         <h4><strong><%= event.name %></strong></h4>
         <p><%= event.time %><%= event.date %>
         <%= event.details %></p>
-        <%= link_to "Update", edit_event_path(event), :class => "btn btn-default" %>
+        <%= link_to "Update #{event.name}", edit_event_path(event), :class => "btn btn-default" %>
         <%= link_to "Delete", event_path(event), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this event from the events page?", :method => "delete"} %>
       </div>
       <hr>
