--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -12,7 +12,7 @@
   <%= f.radio_button :sponsored, false %>
   <%= f.label :sponsored_no, 'Not sponsored' %>
   <%= f.radio_button :sponsored, true %>
-  <%= f.label :sponsored_yes, 'Sponsored!' %>
+  <%= f.label :sponsored_yes, 'Sponsored!' %><br>
   <%= f.label :image, 'Image file name (without the .png)' %>
   <%= f.text_field :image, class: "form-control" %>
   <%= f.radio_button :gender, 'boy' %>
