Send an email to users when they sign up, and show a link in the nav for the admin dashboard if the current user is an admin

--- a/app/views/newsletter_signup_mailer/newsletter_confirmation.html.erb
+++ b/app/views/newsletter_signup_mailer/newsletter_confirmation.html.erb
@@ -1,5 +1,5 @@
-<h1>NewsletterSignup#newsletter_confirmation</h1>
+<h3>Mambo,</h3>
 
 <p>
-  <%= @greeting %>, find me in app/views/newsletter_signup_mailer/newsletter_confirmation.html.erb
+  Thank you for signing up for the Red Sweater Project newsletter! You can expect a brief, exciting monthly newsletter with all the updates about what's happening at the Mungere School.
 </p>
