--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,34 +1,36 @@
-<div class="col-sm-12 sponsor-students-images">
-  <h3>Edit student sponsorships and Events</h3>
-  <% @students.each do |student| %>
-    <div class="col-sm-3 admin-student-view">
-      <%= image_tag("#{student.image}.png") %>
-      <h4><strong><%= student.name %></strong></h4>
-      <p><em><%= student.age %> year-old <%= student.gender %></em><br>
-      I want to become: A <%= student.dream %></p>
-      <%= link_to "Update #{student.name}", edit_student_path(student), :class => "btn btn-default" %>
-      <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
-    </div>
-  <% end %>
+<div class="section-name intro">
+  <div class="col-sm-12 sponsor-students-images">
+    <h2>Edit students and Events</h2>
+    <% @students.each do |student| %>
+      <div class="col-sm-3 admin-student-view">
+        <%= image_tag("#{student.image}.png") %>
+        <h4><strong><%= student.name %></strong></h4>
+        <p><em><%= student.age %> year-old <%= student.gender %></em><br>
+        I want to become: A <%= student.dream %></p>
+        <%= link_to "Update #{student.name}", edit_student_path(student), :class => "btn btn-default" %>
+        <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
-<hr>
-
-<div class="col-sm-12" events>
-  <h3>Upcoming events</h3>
-  <% @events.each do |event| %>
-    <div class="col-sm-12 event">
-      <div class="col-sm-6">
-        <%= image_tag("#{ event.image }") %>
+<div class="section-name intro">
+  <div class="col-sm-12" events>
+    <h2>Upcoming events</h2>
+    <% @events.each do |event| %>
+      <div class="col-sm-12 event">
+        <div class="col-sm-6">
+          <%= image_tag("#{ event.image }") %>
+        </div>
+        <div class="col-sm-6 event-details">
+          <h4><strong><%= event.name %></strong></h4>
+          <p><%= event.time %><%= event.date %>
+          <%= event.details %></p>
+          <%= link_to "Update #{event.name}", edit_event_path(event), :class => "btn btn-default" %>
+          <%= link_to "Delete", event_path(event), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this event from the events page?", :method => "delete"} %>
+        </div>
+        <hr>
       </div>
-      <div class="col-sm-6 event-details">
-        <h4><strong><%= event.name %></strong></h4>
-        <p><%= event.time %><%= event.date %>
-        <%= event.details %></p>
-        <%= link_to "Update #{event.name}", edit_event_path(event), :class => "btn btn-default" %>
-        <%= link_to "Delete", event_path(event), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this event from the events page?", :method => "delete"} %>
-      </div>
-      <hr>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+<div class="section-name intro">
