--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
                   <li>
                   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
                   </li>
+                  <% if current_user.admin = true %>
+                    <li><%= link_to('Admin dashboard', admin_index_path) %></li>
+                  <% end %>
                 <% else %>
                   <li>
                   <%= link_to('Login', new_user_session_path)  %>
@@ -53,7 +56,7 @@
   					<div class="menu-wrap col-md-8 ">
   						<ul class="menu">
   							<li>
-  								<a href="who-we-are.html"><span>Who we are</span></a>
+  								<a href="#"><span>Who we are</span></a>
   								<ul class="submenu">
   									<li><a href="#">Item 1</a></li>
   									<li><a href="#">Item 2</a></li>
@@ -61,14 +64,14 @@
   								</ul>
   							</li>
   							<li>
-  								<a href="what-we-do.html">What We Do</a>
+  								<a href="#">What We Do</a>
   								<ul class="submenu">
   									<li><a href="#">Item 4</a></li>
   									<li><a href="#">Item 5</a></li>
   								</ul>
   							</li>
   							<li>
-  								<a href="get-involved.html">Get involved</a>
+  								<a href="#">Get involved</a>
   							</li>
 
   							<li>
@@ -79,7 +82,7 @@
 
 
   							<li class="donateBtn">
-  								<a href="donate.html">Donate</a>
+  								<a href="#">Donate</a>
   							</li>
   						</ul>
   					</div>
@@ -123,7 +126,6 @@
       <!-- </div> -->
     </nav>
     <div class="container-body">
-
       <%= yield %>
     </div>
     <!-- Footer -->
@@ -165,7 +167,7 @@
           </div>
         </div>
           <h5> &copy; Copyright Red Sweater Project 2016 | All Rights Reserved</h5>
-        <!-- </div> -->
+        <! </div> -->
       <!-- </nav>
   </footer> -->
 </body>
