Passes specs to add user, and to log into an existing account

--- a/app/views/newsletter_signup_mailer/newsletter_confirmation.text.erb
+++ b/app/views/newsletter_signup_mailer/newsletter_confirmation.text.erb
@@ -1,1 +1,3 @@
+Mambo,
+
 Thank you for signing up for the Red Sweater Project newsletter! You can expect a monthly newsletter with all the new, exciting info about what's happening at the school.
