--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
                 <li><%= flash[:alert] %></li>
                 <% if user_signed_in? %>
                   <li>
-                  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+                  <%= link_to('Log out', destroy_user_session_path, :method => :delete) %>
                   </li>
-                  <% if current_user.admin = true %>
+                  <% if current_user.admin %>
                     <li><%= link_to('Admin dashboard', admin_index_path) %></li>
                   <% end %>
                 <% else %>
