Add links to see events and to add student from admin page, allow admin to upload a file using Paperclip

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,11 @@
   								</ul>
   							</li>
   							<li>
-  								<a href="#">Get involved</a>
+  								<%= link_to 'Get involved', events_path %>
+                  <ul class="submenu">
+  									<li><%= link_to 'Events', events_path %></li>
+  									<li><a href="#">Volunteer Vacations</a></li>
+  								</ul>
   							</li>
 
   							<li>
