--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,6 +1,11 @@
 <div class="section-name intro">
-  <div class="col-sm-12 sponsor-students-images">
     <h2>Edit students and Events</h2>
+    <div class="row">
+      <%= link_to "Add a student |", new_student_path %>
+      <%= link_to "Add an event", new_event_path %>
+      <br>
+      <br>
+    </div>
     <% @students.each do |student| %>
       <div class="col-sm-3 admin-student-view">
         <%= image_tag("#{student.image}.png") %>
@@ -11,7 +16,6 @@
         <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
       </div>
     <% end %>
-  </div>
 </div>
 
 <div class="section-name intro">
