--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,17 +1,19 @@
-<div class="col-sm-12" events>
-  <h3>Upcoming events</h3>
-  <% @events.each do |event| %>
-    <div class="col-sm-12 event">
-      <div class="col-sm-6">
-        <%= image_tag("#{ event.image }")%>
+<div class="section-name intro">
+  <div class="col-sm-12" events>
+    <h2>Upcoming events</h2>
+    <% @events.each do |event| %>
+      <div class="col-sm-12 event">
+        <div class="col-sm-6">
+          <%= image_tag("#{ event.image }")%>
+        </div>
+        <div class="col-sm-6 event-details">
+          <h4><strong><%= event.name %></strong></h4>
+          <p><%= event.time %><%= event.date %>
+          <%= event.details %></p>
+          <%= link_to "Add to cart", students_path, :class => "btn btn-default" %>
+        </div>
+        <hr>
       </div>
-      <div class="col-sm-6 event-details">
-        <h4><strong><%= event.name %></strong></h4>
-        <p><%= event.time %><%= event.date %>
-        <%= event.details %></p>
-        <%= link_to "Add to cart", students_path, :class => "btn btn-default" %>
-      </div>
-      <hr>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
