--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,7 +4,7 @@
 <div class="section-name intro">
   <div class="intro-wrapper">
 
-    <div class="col-sm-9">
+    <div class="col-sm-9" id="admin-students-list">
       <div class="row">
         <h2>Edit students and Events</h2>
         <%= link_to "Add a student |", new_student_path, remote: true %>
@@ -13,13 +13,13 @@
         <br>
       </div>
       <% @students.each do |student| %>
-        <div class="col-sm-3 admin-student-view">
+        <div class="col-sm-3 admin-student-view" id="student_<%= student.id %>">
           <%= image_tag("#{student.image}.png") %>
           <h4><strong><%= student.name %></strong></h4>
           <p><em><%= student.age %> year-old <%= student.gender %></em><br>
           I want to become: A <%= student.dream %></p>
-          <%= link_to "Update #{student.name}", edit_student_path(student), :class => "btn btn-default"%>
-          <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", :method => "delete"} %>
+          <%= link_to "Update", edit_student_path(student), :class => "btn btn-default"%>
+          <%= link_to "Delete", student_path(student), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", method: :delete}, remote: true %>
         </div>
       <% end %>
     </div>
