Finish adding placeholder copy for the School page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,9 +59,9 @@
   					</div>
   					<div class="menu-wrap col-md-10">
   						<ul class="menu">
-  							<li><%= link_to 'Our Focus', "pages/ourfocus" %></li>
+  							<li><%= link_to 'Our Focus', "/pages/ourfocus" %></li>
                   <li>
-                    <%= link_to 'The School', "pages/theschool" %></li>
+                    <%= link_to 'The School', "/pages/theschool" %></li>
   								<!-- <ul class="submenu">
                     <li><a href="pages/ourfocus">Our Focus</a></li>
   									<li><a href="#">Item 2</a></li>
