--- a/app/views/pages/theschool.html.erb
+++ b/app/views/pages/theschool.html.erb
@@ -11,30 +11,21 @@
   </div>
 </div>
 <div class="flex">
-  <div class="flex-item-2col">
-    <div class="twocol-left-text">
-      <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year upwards of 200 families apply for one of the 30 available spots in the incoming class. The Mungere campus serves over 240 students each year, with students in form 2, 3, 4, 5, and 6 (grades 6-12).
-      </p>
-      <h5><strong>THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
-      <p>Primary school in Tanzania is free, but secondary school (middle and high school) costs about $500/year, when the average family only makes $530/year.</p>
-      <p>Even when families make sacrifices to send a child to school, there is no gaurentee of the quality of education. All formal tests in Tanzania are in English, and it's not uncommon for private secondary schools to teach in Swahili due to teacher shortages. For students living in rural areas, going to school can also mean traveling great distances, which can be dangerous and exhausting.
-      </p>
-    </div>
-  </div>
-  <div class="flex-item-2col">
-    <div class="twocol-right-text">
-      <h5><strong>AFFORDABLE AND ACCESSIBLE</strong></h5>
-      <p>Families pay a $15/year tuition. While it doesn't cover all expenses, tuition pays for operating costs at the school, and solidifies each family's commitment to their child's education. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them more time to study.</p>
-      <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
-      <p>The Parent Action commity as well as the local tribal government are activley involved with the school. Meetings are held regularly to share ideas, and problem solve as a community.</p>
-    </div>
+  <div class="flex-item-1col">
+    <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year upwards of 200 families apply for one of the 30 available spots in the incoming class. The Mungere campus serves over 240 students each year, with students in form 2, 3, 4, 5, and 6 (grades 6-12).
+    </p>
+    <h5><strong>THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
+    <p>Primary school in Tanzania is free, but secondary school (middle and high school) costs about $500/year, when the average family only makes $530/year.</p>
+    <p>Even when families make sacrifices to send a child to school, there is no gaurentee of the quality of education. All formal tests in Tanzania are in English, and it's not uncommon for private secondary schools to teach in Swahili due to teacher shortages. For students living in rural areas, going to school can also mean traveling great distances, which can be dangerous and exhausting.
+    </p>
+    <h5><strong>AFFORDABLE AND ACCESSIBLE</strong></h5>
+    <p>Families pay a $15/year tuition. While it doesn't cover all expenses, tuition pays for operating costs at the school, and solidifies each family's commitment to their child's education. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them more time to study.</p>
+    <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
+    <p>The Parent Action commity as well as the local tribal government are activley involved with the school. Meetings are held regularly to share ideas, and problem solve as a community.</p>
   </div>
 </div>
-<div class="flex" id="map-container">
-  <div class="flex-item-1col" id="map">
-  </div>
-</div>
-<div class="flex">
+
+<div class="flex blue">
   <div class="flex-item-1col">
     <h2>PREPARED FOR SUCCESS</h2>
     <h5><strong>Our students work hard for... a competitive, high quality education</strong></h5>
@@ -61,6 +52,122 @@
     </ul>
   </div>
 </div>
+
+<div class="flex">
+  <div class="flex-item-intro">
+    <h2>HANDS-ON LEARNING</h2>
+    <p class="description">
+      In addition to their studies in the classroom, students at the Mungere School have the opportunity to participate in our hands-on programs.
+    </p>
+  </div>
+</div>
+<div class="flex">
+  <div class="flex-item-3col">
+    <div class="img-wrapper">
+      <%= image_tag("home_OurFocus_education.png", :class => "img-responsive")%>
+    </div>
+    <div class="focusCopy">
+      <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
+      <p><em>The James B. Nicholson store</em></p>
+      <ul>
+        <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries. The next closest market is a 3 mile walk away, and is only open on select days</li>
+        <li>• Is the first ever solar-powered mobile phone and lantern charging station for community members</li>
+        <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios</li>
+        <li>• Creates income for the Mungere School to off-set operational costs</li>
+      </ul>
+    </div>
+  </div>
+  <div class="flex-item-3col">
+    <div class="img-wrapper">
+      <%= image_tag("home_OurFocus_education.png", :class => "img-responsive")%>
+    </div>
+    <div class="focusCopy">
+      <h5><strong>NUTRITION AND AGRICULTURE</strong></h5>
+      <p><em>The Mungere School Garden</em></p>
+      <ul>
+        <li>• Produces organic food for school meals, reducing operational costs and increasing campus sustainability</li>
+        <li>• Provides hands-on experience for agriculture class coursework. Many of our students come from pastorial tribes, and the knowledge they gain from garden work is directly applied to their own family's gardening practices.</li>
+        <li>• Creates income. Produce is sold at the school store to fund ongoing operations, while providing affordable, nutritious food to the local community. </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flex-item-3col">
+    <div class="img-wrapper">
+      <%= image_tag("home_OurFocus_education.png", :class => "img-responsive")%>
+    </div>
+    <div class="focusCopy">
+      <h5><strong>LEADERSHIP AND TEAMWORK</strong></h5>
+      <p><em>The Mungere Athletics Program</em></p>
+      <p>
+        Sometimes lessons in teamwork, dedication and respect are taught best by doing. That's why time for athletics is built into each school week, and encouraged outside of class.
+      </p>
+      <p>
+        Tasiana is a prime example. She is the first girl in the region to play on an all boys soccer team, and has been recognized by her fellow classmates as well as FIFA for her skills and leadership on the soccer pitch.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="flex" id="map-container">
+  <div class="flex-item-1col" id="map">
+  </div>
+</div>
+<div class="flex blue">
+  <div class="flex-item-1col">
+    <h2>ABOUT TANZANIA, EAST AFRICA</h2>
+    <p>
+      Tanzania is an East African country known for its beautiful wilderness areas. They include the Serengeti National Park, a safari mecca populated by the “big five” game (elephant, lion, leopard, buffalo, rhino), and Kilimanjaro National Park, home to Africa’s highest mountain. Offshore lie the lush tropical islands of Zanzibar and Mafia Marine Park.
+    </p><br>
+    <p>
+      The Mungere School is located just an hour and a half from Kilimanjaro airport, next to the great rift wall. Swahili is the national language of Tanzania, but by the time students graduate from Mungere, they are trilingual, speaking English, Swahili and their native tribal tongue such as Kimasai, Kirangi or Kichagga.
+    </p>
+    <br>
+    <p>
+      <a href="#">Download our Africa factsheet</a>
+    </p>
+    <p>
+      <a href="#">See some beautiful photos by National Geographic</a>
+    </p>
+  </div>
+</div>
+<div class="flex">
+  <div class="flex-item-2col yellow-bottom-left">
+    <div class="twocol-left-text">
+      <h2>OUR FOCUS</h2>
+      <p>Quality education, gender equality and responsible innovation .Learn how our focus is making an impact in Mungere Village.</p>
+      <div class="btns-wrapper">
+        <a href="ourfocus" class="btn btn-big btn-secondary"><span>LEARN ABOUT OUR FOCUS</span></a>
+      </div>
+    </div>
+  </div>
+  <div class="flex-item-2col ourfocus_donate">
+    <div class="twocol-right-text">
+      <h2>INVEST IN A BETTER WORLD</h2>
+      <p>Sending a girl in the developing world to secondary school has a higher return on investment than any other effort.*
+      </p>
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Choose your gift
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">25</a></li>
+          <li><a href="#">50</a></li>
+          <li><a href="#">100</a></li>
+          <li><a href="#">500</a></li>
+          <li><a href="#">1000</a></li>
+        </ul>
+        <p class="quote-source">
+          <a href="*HTTP://IIPDIGITAL.USEMBASSY.GOV/ST/ENGLISH/PUBLICATION/2011/06/20110624094
+          700AIDAN0.9995037.HTML#AXZZ3XPFM408W">*STATISTIC SOURCE</a>
+        </p>
+        <div class="btns-wrapper btn-yellow">
+          <a href="#" class="btn btn-big btn-solid"><span>DONATE</span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
 handler = Gmaps.build('Google');
 handler.buildMap({ provider: {disableDefaultUI: true}, internal: {id: 'map'}}, function(){
