Add content to the Volunteer page

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -1,8 +1,60 @@
+<!-- Banner -->
+<div class="page-banner ourfocus">
+  <div class="title-mask">
+    <div class="container">
+      <div class="banner-content">
+        <h2>"NO DOUBT THEY WILL GO ON TO DO GREAT THINGS"</h2>
+        <!-- <p class="source"><em>—Denise D., Volunteer Office and Account Manager</em></p> -->
+        <div class="short-text">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="flex">
+  <div class="flex-item-1col">
+    <h2>VOLUNTEER</h2>
+    <p>
+      We offer short- and long-term positions both in Tanzania and abroad. While nearly all positions are volunteer, we occassionally offer roles which include a monthly stipend. Volunteer work ranges from writers who contribute remotely, to office support, to teachers who live at our staff house for an entire school year, and work in the classroom daily.
+      </p>
+    <p>
+      Red Sweater Project is made possible by the generosity of our skilled volunteers and local Tanzanian staff. We are a global community that believes that when woven together, our strengths can accomplish more than any one of us alone.
+    </p>
+  </div>
+</div>
+<hr>
+<div class="flex">
+  <div class="flex-item-image">
+    <img src="../images/volunteer_young_group.jpg" />
+  </div>
+</div>
+<div class="flex blue">
+  <div class="flex-item-1col">
+    <h2>VOLUNTEER GROUPS</h2>
+    <p>
+      Red Sweater Project partners with numerous volunteer groups each year who travel to Tanzania to complete projects at the Mungere School. Some of the past groups have included:
+    </p>
+    <ul>
+      <li>• Moondance Adventures</li>
+      <li>• Engineers without Borders</li>
+      <li>• Pacific University's School of Optometry</li>
+      <li>• Harvard's School of Engineering</li>
+    </ul>
+    <p>
+      Our volunteers have worked on a full gammut of projects: from planning and designing the solar-power system, to performing eye exams, to painting new classrooms, and running creative workshops with students.
+    </p>
+    <hr>
+  </div>
+</div>
+
+
+
 
 <div id="map-container">
-<div class="" id="map">
-
-</div>
+  <div class="" id="map">
+  </div>
 </div>
 <script type="text/javascript">
 var handler = Gmaps.build('Google');
