Add a Position model, and a one to many relationship between volunteers and positions

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -48,13 +48,33 @@
     <hr>
   </div>
 </div>
-
-
-
-
 <div id="map-container">
+  <div class="flex">
+    <h5>Our volunteers come from around the world</h5>
+  </div>
   <div class="" id="map">
   </div>
+</div>
+
+<div class="flex">
+  <h2>AVAILABLE POSITIONS</h2>
+</div>
+<div class="flex">
+  <div class="flex-item-2-col">
+    <h2>WORKING IN TANZANIA</h2>
+    <p>
+      All teaching positions require an MA in teaching and ELS training.
+    </p>
+English/ESL TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
+Math TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
+Physics TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
+Office and Accounts ManagerIncludes a monthly stipend of $300May 1, 2016 - March 30, 2017
+Film MakerOne month position on campus to create  film shorts about the work being done at the Mungere Campus.
+  </div>
+  <div class="flex-item-2-col">
+
+  </div>
+
 </div>
 <script type="text/javascript">
 var handler = Gmaps.build('Google');
