--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <h3>Oops! We couldn't add this student. Fix these errors, and try again:</h3>
+  <h3>Oops! We couldn't make this change. Fix these errors, and try again:</h3>
   <ul>
     <% object.errors.full_messages.each do |message| %>
       <li><%= message %></li>
