--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -61,20 +61,27 @@
 </div>
 <div class="flex">
   <div class="flex-item-2-col">
-    <h2>WORKING IN TANZANIA</h2>
+    <h5>IN TANZANIA</h5>
     <p>
       All teaching positions require an MA in teaching and ELS training.
     </p>
-English/ESL TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
-Math TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
-Physics TeacherTerm II: July-Dec 2016;Term I: Jan-June 2017
-Office and Accounts ManagerIncludes a monthly stipend of $300May 1, 2016 - March 30, 2017
-Film MakerOne month position on campus to create  film shorts about the work being done at the Mungere Campus.
+    <% if @positions.any? %>
+      <ul>
+        <% @positions.each do |position| %>
+          <li>
+            <p><strong><%= position.title %></strong></p>
+            <p><%= position.location %></p>
+            <p><%= position.term %></p>
+            <% if position.stipend != 0 %>
+              <p>This position offers a monthly stipend of: $<%= position.stipend%>
+              </p>
+            <% end %>
+          </li>
+          <% end %>
+        <% end %>
+      </ul>
+    <% end %>
   </div>
-  <div class="flex-item-2-col">
-
-  </div>
-
 </div>
 <script type="text/javascript">
 var handler = Gmaps.build('Google');
