--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <script src="//maps.google.com/maps/api/js?v=3.24&key=<%=ENV['GMAPS_API']%>"></script>
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
     <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
-    <!-- <script type="text/javascript" src="path/to/instafeed.min.js"></script> -->
+    <script type="text/javascript" src="path/to/instafeed.min.js"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
@@ -61,7 +61,7 @@
   						<ul class="menu">
   							<li><%= link_to 'Our Focus', "/pages/ourfocus" %></li>
                   <li>
-                    <%= link_to 'The School', "/pages/theschool" %></li>
+                    <%= link_to 'The School', schools_path %></li>
   								<!-- <ul class="submenu">
                     <li><a href="pages/ourfocus">Our Focus</a></li>
   									<li><a href="#">Item 2</a></li>
