--- a/app/views/pages/theschool.html.erb
+++ b/app/views/pages/theschool.html.erb
@@ -25,6 +25,18 @@
   </div>
 </div>
 
+<div class="flex" id="instafeed">
+  <% @instagram.each do |instagram| %>
+  <div class="col-sm-2">
+    <%= image_tag instagram.images.standard_resolution.url %>
+  </div>
+  <% end %>
+</div>
+
+<!-- <div id="instafeed">
+
+</div> -->
+
 <div class="flex blue">
   <div class="flex-item-1col">
     <h2>PREPARED FOR SUCCESS</h2>
@@ -167,6 +179,17 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+    var feed = new Instafeed({
+        get: 'user',
+        userId: '<%=ENV['INSTAGRAM_USER_ID']%>',
+        accessToken: '<%=ENV['INSTAGRAM_ACCESS_TOKEN']%>',
+        // filter: function(image) {
+        //     return image.tags.indexOf('HAPPINESS') >= 0;
+        // }
+    });
+    feed.run();
+</script>
 
 <script type="text/javascript">
 handler = Gmaps.build('Google');
