--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
                   <% end %>
                 </ul>
   				<div class="row main-nav">
-            <a class="logo-wrap" href="/"><%= image_tag("RSPlogo_175x59.png") %></a>
+            <a class="logo-wrap" href="/"><%= image_tag("RSPlogo_175x59.png")%></a>
   						<ul class="nav">
                 <li>
                   <%= link_to 'WHO WE ARE', schools_path %></li>
@@ -72,11 +72,11 @@
                     <div class="nav-column">
                         <h3>WHO WE ARE</h3>
                         <ul>
-                          <li><a href="#">The Red Sweater</a></li>
+                          <li><a href="/pages/redsweater">The Red Sweater</a></li>
                           <li><%= link_to 'Our focus', "pages/ourfocus" %></li>
-                          <li><a href="#">Our story</a></li>
-                          <li><a href="#">The team</a></li>
-                          <li><a href="#">News + Reviews</a></li>
+                          <li><a href="/pages/ourstory">Our story</a></li>
+                          <li><a href="/pages/theteam">The team</a></li>
+                          <li><a href="/pages/news-reviews">News + Reviews</a></li>
                         </ul>
                     </div>
 
@@ -84,9 +84,9 @@
                         <h3>WHAT WE DO</h3>
                         <ul>
                           <li><%= link_to 'The School', schools_path %></li>
-                          <li><a href="#">The vision</a></li>
-                          <li><a href="#">Featured stories</a></li>
-                          <li><%= link_to 'FAQ', "pages/faq" %></li>
+                          <!-- <li><a href="#">The vision</a></li> -->
+                          <li><a href="/pages/featuredstory">Featured stories</a></li>
+                          <li><%= link_to 'FAQ', "/pages/faq" %></li>
                           <li><a href="#">Blog</a></li>
                         </ul>
                       </div>
@@ -94,9 +94,9 @@
                         <h3>GET INVOLVED</h3>
                         <ul>
                           <li><a href="#">Donate</a></li>
-                          <li><a href="#">Sponsor</a></li>
-                          <li><a href="#">Volunteer</a></li>
-                          <li><a href="#">Get Creative</a></li>
+                          <li><%= link_to 'Sponsor', students_path %></li>
+                          <li><%= link_to 'Volunteer', "pages/volunteer" %></li>
+                          <li><%= link_to 'Get creative', "pages/getcreative" %></li>
                           <li><%= link_to 'Events', events_path %></li>
                           <li><a href="#">Shop and Support</a></li>
                         </ul>
