--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -271,6 +271,8 @@ body {
   justify-content: flex-end;
   flex-wrap: nowrap;
   position: relative;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .main-nav.first-child {
