--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,7 @@
                         <ul>
                           <li><a href="#">Donate</a></li>
                           <li><%= link_to 'Sponsor', students_path %></li>
-                          <li><%= link_to 'Volunteer', "pages/volunteer" %></li>
+                          <li><%= link_to 'Volunteer', volunteers_path %></li>
                           <li><%= link_to 'Get creative', "pages/getcreative" %></li>
                           <li><%= link_to 'Events', events_path %></li>
                           <li><a href="#">Shop and Support</a></li>
