--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -50,21 +50,22 @@
 </div>
 <div id="map-container">
   <div class="flex">
-    <h5>Our volunteers come from around the world</h5>
+    <h5>OUR VOLUNTEERS COME FROM AROUND THE WORLD</h5>
   </div>
   <div class="" id="map">
   </div>
 </div>
 
 <div class="flex">
-  <h2>AVAILABLE POSITIONS</h2>
+  <div class="flex-item-1col">
+    <h2>AVAILABLE POSITIONS</h2>
+    <p>
+      All teaching positions require an MA in teaching and ELS training. Positions are in Tanzania unless otherwise noted.
+    </p>
+  </div>
 </div>
 <div class="flex">
   <div class="flex-item-2-col">
-    <h5>IN TANZANIA</h5>
-    <p>
-      All teaching positions require an MA in teaching and ELS training.
-    </p>
     <% if @positions.any? %>
       <ul>
         <% @positions.each do |position| %>
@@ -72,14 +73,18 @@
             <p><strong><%= position.title %></strong></p>
             <p><%= position.location %></p>
             <p><%= position.term %></p>
-            <% if position.stipend != 0 %>
+            <% if position.stipend != nil && position.stipend != 0 %>
               <p>This position offers a monthly stipend of: $<%= position.stipend%>
               </p>
             <% end %>
           </li>
+          <hr>
           <% end %>
       </ul>
     <% end %>
+  </div>
+  <div class="flex-item-2col">
+    <img src="images/DSCN1239.jpg">
   </div>
 </div>
 <script type="text/javascript">
