Add image to banner for volunteer page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -877,6 +877,13 @@ header {
   -o-background-size: cover;
   background-size: cover;
 }
+.volunteer {
+  background: url(../images/volunteer_banner.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .redsweater {
   background: url(../images/redsweater_banner.jpg) center center no-repeat;
