--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Banner -->
-<div class="page-banner ourfocus">
+<div class="page-banner volunteer">
   <div class="title-mask">
     <div class="container">
       <div class="banner-content">
@@ -87,6 +87,29 @@
     <img src="images/DSCN1239.jpg">
   </div>
 </div>
+
+<div class="flex">
+  <div class="flex-item-2col yellow-bottom-left">
+    <div class="twocol-left-text">
+      <h2>WHAT OUR VOLUNTEERS ARE SAYING</h2>
+      <p>Read first-hand experiences about volunteering with Red Sweater Project.</p>
+      <div class="btns-wrapper">
+        <a href="#" class="btn btn-big btn-secondary"><span>READ REVIEWS</span></a>
+      </div>
+    </div>
+  </div>
+  <div class="flex-item-2col ourfocus_donate">
+    <div class="twocol-right-text">
+      <h2>FUNDRAISING AND VOLUNTEER VACATIONS</h2>
+        <div class="btns-wrapper btn-yellow">
+          <a href="#" class="btn btn-secondary btn-solid"><span>GET CREATIVE</span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <script type="text/javascript">
 var handler = Gmaps.build('Google');
 handler.buildMap({ provider: {disableDefaultUI: true}, internal: {id: 'map'}}, function(){
