admin index updates to streamline functionality. Anchors now work to direct admin to sections they want to update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -695,13 +695,17 @@ h3 {
   justify-content: center;
 }
 
-#events-form{
+#events-form, #position-change-form {
   margin-top: 5%;
 }
 
 #change-form {
   margin-top: 8%;
   margin-left: 0;
+}
+
+#events-section, #positions-section {
+  margin-bottom: 100px;
 }
 
 .sponsor-students:hover {
