--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,5 +2,5 @@
     <h4><strong><%= event.name %></strong></h4>
     <p><%= event.time %><%= event.date %>
     <%= event.details %></p>
-    <%= link_to "Update #{event.name}", edit_event_path(event), :class => "btn btn-default" %>
-    <%= link_to "Delete", event_path(event), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this event from the events page?", :method => "delete"} %>
+    <%= link_to "Update #{event.name}", edit_event_path(event), :class => "btn btn-default", remote: true %>
+    <%= link_to "Delete", event_path(event), :class => "btn btn-danger", :data => {:confirm => "Are you sure you want to remove this event from the events page?", :method => "delete"}, remote: true %>
