--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
                           <!-- <li><a href="#">The vision</a></li> -->
                           <li><a href="/pages/featuredstory">Featured stories</a></li>
                           <li><%= link_to 'FAQ', "/pages/faq" %></li>
-                          <li><a href="#">Blog</a></li>
+                          <li><%= link_to 'Blog', "/posts" %></li>
                         </ul>
                       </div>
                     <div class="nav-column">
