--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,7 +25,17 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :quote, "Pull Quote" %>
+    <%= f.text_field :quote, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :image, 'Image' %>
+    <%= f.file_field :image%>
   </div>
 
   <div class="form-group">
