--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,23 @@
 <div class="container">
-  <div class="col-sm-10 col-sm-offset-1 col-xs-12 blog-content">
+  <div class="flex-item-1col blog-content">
     <% @posts.each do |post| %>
-    <div class="col-xs-12">
-      <div class="text-center">
-        <h2><%= post.title %></h2>
-        <h6><%= post.created_at.strftime('%b %d, %Y') %></h6>
-      </div>
+      <div class="col-sm-8">
+        <%= image_tag("#{post.image}")%>
+        <div>
+          <h2><%= post.title %></h2>
+          <h6><%= post.created_at.strftime('%b %d, %Y') %></h6>
+        </div>
 
-      <div>
-        <%= raw(post.body).truncate(358) %>
-      </div>
+        <div>
+          <%= raw(post.body).truncate(358) %>
+        </div>
 
-      <div class="text-center">
-        <%= link_to "READ MORE", post_path(post) %>
+        <div>
+          <%= link_to "READ MORE", post_path(post) %>
+        </div>
+        <br>
+        <hr>
       </div>
-      <br>
-    </div>
     <% end %>
   </div>
 </div>
