--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,11 @@
                       <% end %>
                     </li>
                     <li>
+                      <% if current_user.blog = true %>
+                        <li><%= link_to('NEW BLOG POST', new_post_path)%></li>
+                      <% end %>
+                    </li>
+                    <li>
                     <%= link_to('LOG OUT', destroy_user_session_path, :method => :delete) %>
                     </li>
                   <% else %>
