--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,20 @@
 <div class="container">
-  <div class="flex-item-1col blog-content">
+  <div class="blog-content flex">
     <% @posts.each do |post| %>
-      <div class="col-sm-8">
+      <div class="flex-item-3col">
         <%= image_tag("#{post.image}")%>
         <div>
-          <h2><%= post.title %></h2>
           <h6><%= post.created_at.strftime('%b %d, %Y') %></h6>
+          <h2><%= post.title %></h2>
+          <p>
+            <%= post.quote %>
+          </p>
         </div>
+        <!-- <div>
+          <%= raw(post.body).truncate(358) %></p>
+        </div> -->
 
-        <div>
-          <%= raw(post.body).truncate(358) %>
-        </div>
-
-        <div>
+        <div><br>
           <%= link_to "READ MORE", post_path(post) %>
         </div>
         <br>
