Add AJAX to Update and Delete blog functions on the admin dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -740,7 +740,7 @@ h3 {
   justify-content: center;
 }
 
-#events-form, #position-change-form {
+#events-form, #position-change-form, #post-change-form {
   margin-top: 5%;
 }
 
