--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -111,18 +111,22 @@
   </div>
 </div>
 <div class="section-name intro">
-  <div class="col-sm-8">
-    <hr id="blog-posts-section">
-    <h2>EDIT BLOG POSTS</h2>
-    <% if @posts.any? %>
+  <div class="col-sm-6">
+  <hr id="blog-posts-section">
+  <h2>EDIT BLOG POSTS</h2>
+  <% if @posts.any? %>
     <ul>
       <% @posts.each do |post| %>
-        <li><h5><%= post.created_at.strftime('%b %d, %Y') %></h5><%= post.title %>, <em><%= post.author %></em></li>
-        <%= link_to "Update", edit_post_path(post), remote: true %> |
-        <%= link_to "Delete", post_path(post), :data => {:confirm => "Are you sure you want to remove this blog post?", method: :delete}, remote: true %>
+        <div id="post_<%= post.id %>" >
+          <li><h5><%= post.created_at.strftime('%b %d, %Y') %></h5><%= post.title %>, <em><%= post.author %></em></li>
+          <%= link_to "Update", edit_post_path(post), remote: true %> |
+          <%= link_to "Delete", post_path(post), :data => {:confirm => "Are you sure you want to remove this blog post?", method: :delete}, remote: true %>
+        </div>
       <% end %>
     </ul>
-    <% end %>
+  <% end %>
   </div>
+  <div class="col-sm-4" id="post-change-form" >
 
+  </div>
 </div>
