--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @post do |f| %>
+<%= simple_form_for @post, remote: true do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
+    <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}} %>
   </div>
 
   <div class="form-group">
@@ -40,5 +40,6 @@
 
   <div class="form-group">
     <%= f.button :submit, :class => "btn btn-default" %>
+    <button type="button" id="cancel" class="btn btn-default">Cancel</button>
   </div>
 <% end %>
