Save updates before review with teammates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,7 +140,7 @@ body {
    border-color: #fff;
    border-style: solid;
    box-shadow: 2px 2px 10px #B1B1B1;
-   margin: 25px 10% 25px 0;
+   margin: 25px 10% 25px 10%;
    border-width: 7px;
  }
  #map{
