--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -95,7 +95,7 @@
       <h2>STORIES FROM STUDENTS AND STAFF</h2>
       <p>Explore true stories to learn more about our students and staff, and the work being done at the Mungere School.</p>
       <div class="btns-wrapper">
-        <a href="#" class="btn btn-big btn-secondary"><span>READ FEATURED STORIES</span></a>
+        <a href="/posts" class="btn btn-big btn-secondary"><span>EXPLORE THE BLOG</span></a>
       </div>
     </div>
   </div>
