--- a/app/views/pages/theschool.html.erb
+++ b/app/views/pages/theschool.html.erb
@@ -120,8 +120,7 @@
   </div>
 </div>
 <div class="flex" id="map-container">
-  <div class="flex-item-1col" id="map">
-  </div>
+  <div class="flex-item-1col school-map" id="map"></div>
 </div>
 <div class="flex blue">
   <div class="flex-item-1col">
@@ -147,7 +146,7 @@
       <h2>OUR FOCUS</h2>
       <p>Quality education, gender equality and responsible innovation .Learn how our focus is making an impact in Mungere Village.</p>
       <div class="btns-wrapper">
-        <a href="ourfocus" class="btn btn-big btn-secondary"><span>LEARN ABOUT OUR FOCUS</span></a>
+        <a href="/ourfocus" class="btn btn-big btn-secondary"><span>LEARN ABOUT OUR FOCUS</span></a>
       </div>
     </div>
   </div>
