--- a/app/views/pages/redsweater.html.erb
+++ b/app/views/pages/redsweater.html.erb
@@ -44,36 +44,34 @@
   <div class="flex page-canvas">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h4>WHAT MAKES THE SCHOOL UNIQUE?</h4>
-        <div class="btns-wrapper">
-          <a href="#" class="btn btn-secondary"><span>LEARN MORE ABOUT THE SCHOOL</span></a>
-        </div>
-        </div>
-    </div>
-    <div class="shadow">
-      <div class="flex-item-2col ourfocus_donate">
-        <div class="twocol-right-text">
-          <h4>BE A DONOR</h4>
-          <p>Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.
-          </p>
-          <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              Choose your gift
-              <span class="caret"></span>
-            </button>
-            <div class="btns-wrapper">
-              <a href="#" class="btn btn-solid"><span>DONATE</span></a>
-            </div>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="#">25</a></li>
-              <li><a href="#">50</a></li>
-              <li><a href="#">100</a></li>
-              <li><a href="#">500</a></li>
-              <li><a href="#">1000</a></li>
-            </ul>
+        <h2>BE A DONOR</h2>
+        <p>Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.
+        </p>
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Choose your gift
+            <span class="caret"></span>
+          </button>
+          <div class="btns-wrapper">
+            <a href="#" class="btn btn-solid"><span>DONATE</span></a>
           </div>
-        </div>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">25</a></li>
+            <li><a href="#">50</a></li>
+            <li><a href="#">100</a></li>
+            <li><a href="#">500</a></li>
+            <li><a href="#">1000</a></li>
+          </ul>
       </div>
     </div>
+  </div>
+    <div class="shadow nonmobile">
+      <div class="flex-item-2col ourfocus_donate">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="shadow mobile">
+  <div class="flex-item-2col ourfocus_donate">
   </div>
 </div>
